--- a/package.json
+++ b/package.json
@@ -36,9 +36,17 @@
         "redux": "^4.2.0",
         "slick-carousel": "^1.8.1",
         "web-vitals": "^2.1.4",
-        "yup": "^0.32.11"
+        "yup": "^0.32.11",
+        "autoprefixer": "^10.4.8",
+        "babel-plugin-module-resolver": "^4.1.0",
+        "gh-pages": "^4.0.0",
+        "postcss": "^8.4.14",
+        "tailwindcss": "^3.1.7",
+        "tailwindcss-textshadow": "^2.1.3"
     },
     "scripts": {
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build",
         "start": "react-app-rewired start",
         "build": "react-app-rewired build",
         "test": "react-app-rewired test",
@@ -63,12 +71,5 @@
             "last 1 safari version"
         ]
     },
-    "devDependencies": {
-        "autoprefixer": "^10.4.8",
-        "babel-plugin-module-resolver": "^4.1.0",
-        "gh-pages": "^4.0.0",
-        "postcss": "^8.4.14",
-        "tailwindcss": "^3.1.7",
-        "tailwindcss-textshadow": "^2.1.3"
-    }
+    "devDependencies": {}
 }
