--- a/package.json
+++ b/package.json
@@ -19,14 +19,14 @@
         "@testing-library/jest-dom": "^5.16.4",
         "@testing-library/react": "^13.3.0",
         "@testing-library/user-event": "^13.5.0",
+        "autoprefixer": "^10.4.8",
         "axios": "^0.27.2",
+        "babel-plugin-module-resolver": "^4.1.0",
         "customize-cra": "^1.0.0",
-        "firebase": "^9.9.3",
         "notistack": "^2.0.5",
         "react": "^18.2.0",
         "react-app-rewired": "^2.2.1",
         "react-dom": "^18.2.0",
-        "react-firebaseui": "^6.0.0",
         "react-hook-form": "^7.34.2",
         "react-loading-skeleton": "^3.1.0",
         "react-redux": "^8.0.2",
@@ -34,15 +34,10 @@
         "react-scripts": "^5.0.1",
         "react-slick": "^0.29.0",
         "redux": "^4.2.0",
+        "sass": "^1.56.1",
         "slick-carousel": "^1.8.1",
         "web-vitals": "^2.1.4",
-        "yup": "^0.32.11",
-        "autoprefixer": "^10.4.8",
-        "babel-plugin-module-resolver": "^4.1.0",
-        "gh-pages": "^4.0.0",
-        "postcss": "^8.4.14",
-        "tailwindcss": "^3.1.7",
-        "tailwindcss-textshadow": "^2.1.3"
+        "yup": "^0.32.11"
     },
     "scripts": {
         "predeploy": "npm run build",
@@ -71,5 +66,10 @@
             "last 1 safari version"
         ]
     },
-    "devDependencies": {}
+    "devDependencies": {
+        "gh-pages": "^4.0.0",
+        "postcss": "^8.4.14",
+        "tailwindcss": "^3.1.7",
+        "tailwindcss-textshadow": "^2.1.3"
+    }
 }
