--- a/.env
+++ b/.env
@@ -1,5 +1,3 @@
+# REACT_APP_API = https://tn-store-back-end.herokuapp.com
+REACT_APP_API = http://localhost:3001
 
-REACT_APP_API_URL = https://shoe-data.herokuapp.com
-REACT_APP_FIREBASE_API = AIzaSyByeFnEuM1w_nyksQSQaVczNidu0uD5oMA
-REACT_APP_FIREBASE_AUTH_DOMAIN = shoesweb-4d916.firebaseapp.com
-# REACT_APP_FIREBASE_AUTH_DOMAIN = shoe-shop-mauve.vercel.app 
